<resources>
    <string name="app_name">LetsMeet</string>
    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="user_register">新用户注册</string>
    <string name="register">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">用户名无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">用户名不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>

    <string name="prompt_confirm_password">确认密码</string>
    <string name="erro_incorrect_confirm_password">密码不一致</string>
    <string name="username_exist">用户名已存在</string>

    <string name="setting">设置</string>
    <!--菜单项 menu_main.xml-->
    <string name="collect_set">采样设置</string>
    <string name="clear">清屏</string>
    <string name="over">结束</string>
    <string name="beginNavigate">开始导航</string>


    <!--设置界面setting.xml 主界面 变量名-->
    <string name="collect_data">采集数据</string>
    <string name="parameter_set">设置采样参数</string>
    <string name="step_length_set">设置步长</string>
    <string name="frequency_set">设置采样频率</string>

    <!--频率设置界面frequency_setting.xml-->
    <string name="accelerate_frequency">加速度采样频率</string>
    <string name="magnetic_frequency">地磁场采样频率</string>
    <string name="orient_frequency">方位角采样频率</string>
    <string name="gyroscope_frequency">陀螺仪采样频率</string>
    <string name="pressure_frequency">压力计采样频率</string>
    <string name="light_frequency">光强度采样频率</string>
    <string name="gps_frequency">GPS采样频率</string>
    <string name="satellite_frequency">卫星采样频率</string>
    <string name="wifi_frequency">WiFi采样频率</string>

    <!--导航提示 NavigateTip-->
    <!--<string name="wait_for_connect">等待连接......</string>-->
    <!--<string name="target_north">目标位于正北方</string>-->
    <!--<string name="target_south">目标位于正南方</string>-->
    <!--<string name="target_east">目标位于正东方</string>-->
    <!--<string name="target_west">目标位于正西方</string>-->
    <!--<string name="target_northeast">目标位于东北方</string>-->
    <!--<string name="target_southeast">目标位于东南方</string>-->
    <!--<string name="target_northwest">目标位于西北方</string>-->
    <!--<string name="target_southwest">目标位于西南方</string>-->
    <!--<string name="target_departing">正在远离目标，请改变当前方向前行</string>-->
    <!--<string name="target_approching">正在靠近目标，请保持当前方向继续前进</string>-->
    <!--<string name="keep_going">继续前进</string>-->
    <!--<string name="meet">相遇</string>-->


    <string-array name="parameter">
        <item>加速度</item>
        <item>地磁场</item>
        <item>方位角</item>
        <item>陀螺仪</item>
        <item>压力计</item>
        <item>光强度</item>
        <item>GPS</item>
        <item>卫星</item>
        <item>WiFi</item>
    </string-array>

    <string-array name="parameter_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="frequency">
        <item>1 Hz</item>
        <item>5 Hz</item>
        <item>10 Hz</item>
        <item>15 Hz</item>
        <item>20 Hz</item>
        <item>25 Hz</item>
    </string-array>
    <!--<string-array name="frequency_values">-->
    <!--<item>5</item>-->
    <!--<item>10</item>-->
    <!--<item>15</item>-->
    <!--<item>20</item>-->
    <!--<item>25</item>-->
    <!--</string-array>-->

    <string-array name="frequency_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>

</resources>
