<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="dataCollectSwitch"
        android:title="@string/collect_data" />

    <MultiSelectListPreference
        android:defaultValue="@array/parameter_values"
        android:key="parameter"
        android:entries="@array/parameter"
        android:entryValues="@array/parameter_values"
        android:title="@string/parameter_set"
        />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="10"
        android:inputType="number"
        android:key="stepLength"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/step_length_set" />

    <ListPreference
        android:defaultValue="20"
        android:entries="@array/frequency"
        android:entryValues="@array/frequency_values"
        android:key="frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/frequency_set" />

</PreferenceScreen>
